# pii-guard

./: .dockerignore  .gitignore  .gitleaks.toml  .pii-guard.yaml  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  LICENSE  README.md  compose_diff.md  docker-compose.yml  pyproject.toml
.github/: BRANCH_PROTECTION.md  CODEOWNERS  pull_request_template.md
.github/workflows/: ci.yml
.pii-guard/: .gitignore
docs/: DECISIONS.md  SETUP.md  SIGNING.md  TEAM-ONBOARDING.md  architecture-arc42.md  chat-python-vs-docker-2026-04-02.md  field-test-feedback-2026-04-01.md  field-test-feedback-session-2.md  praesentation-pii-guard-collana.html  test-report-2026-04-01.md
piiguard/: .pii-guard.yaml  azure_login.sh  docker-compose.yml  docker_install.sh  docker_install_ubuntu.sh  pii-guard-hook.sh  pii-guard-statusline.sh
scripts/: build-and-push.sh  build_local_docker_image.sh
src/pii_guard/: __init__.py  audit.py  cli.py  config.py  detector.py  hook.py  mapper.py  overrides.py  proxy.py  recognizers.py  server.py  substitutor.py
tests/: test_audit.py  test_config.py  test_detector.py  test_hook.py  test_hook_docker.py  test_integration.py  test_mapper.py  test_server.py  test_substitutor.py
